--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.2.21'
+    ext.kotlin_argparser_version = '2.0.6'
 
     repositories {
         mavenCentral()
@@ -27,6 +28,9 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    compile "com.xenomachina:kotlin-argparser:$kotlin_argparser_version"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
