--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.31'
+    ext.kotlin_version = '1.2.50'
     ext.kotlin_argparser_version = '2.0.6'
 
     repositories {
@@ -40,6 +40,10 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     compile "com.xenomachina:kotlin-argparser:$kotlin_argparser_version"
+
+    compile "org.apache.xmlgraphics:batik-transcoder:1.10"
+
+    compile "org.apache.xmlgraphics:batik-codec:1.9"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
