--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
+}
+
 buildscript {
     ext.kotlin_version = '1.2.50'
     ext.kotlin_argparser_version = '2.0.6'
