--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.0'
-}
+assert hasProperty('javaHome'): "Set the property 'javaHome' in your your gradle.properties pointing to a Java 6 or 7 installation"
+assert hasProperty('targetJavaVersion'): "Set the property 'targetJavaVersion' in your your gradle.properties to '1.6' or '1.7'"
+
+//task wrapper(type: Wrapper) {
+//    gradleVersion = '2.0'
+//}
 
 buildscript {
     ext.kotlin_version = '1.2.50'
