--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ buildscript {
     ext.kotlin_argparser_version = '2.0.7'
 
     repositories {
-        mavenLocal()
         mavenCentral()
         jcenter()
     }
@@ -34,7 +33,8 @@ run {
 }
 
 repositories {
-    mavenLocal()
+    maven { url 'https://jitpack.io' }
+    // mavenLocal()
     mavenCentral()
     jcenter()
 }
@@ -50,7 +50,7 @@ dependencies {
 
     compile "org.apache.xmlgraphics:batik-codec:1.9"
 
-    compile "se.thinnikatech:vwline-lib:1.0-SNAPSHOT"
+    compile "com.github.carlemil:VWLine:0.0.1"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
