--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,16 @@ apply plugin: 'maven-publish'
 sourceCompatibility = 1.8
 
 repositories {
-    maven { url 'https://jitpack.io' }
     mavenLocal()
+    //maven { url 'https://jitpack.io' }
     mavenCentral()
     jcenter()
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "com.github.carlemil:VWLine:0.0.2"
+    //implementation "com.github.carlemil:vwcurve:1.0-SNAPSHOT"
+    implementation "se.kjellstrand:vwcurve:1.0-SNAPSHOT"
     testCompile "org.apache.xmlgraphics:batik-transcoder:1.10"
     testCompile "org.apache.xmlgraphics:batik-codec:1.9"
     testCompile group: 'junit', name: 'junit', version: '4.12'
