--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 }
 
 group 'se.kjellstrand'
-version '1.1-SNAPSHOT'
+version '1.2'
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
@@ -25,15 +25,15 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenLocal()
-    //maven { url 'https://jitpack.io' }
+    maven { url 'https://jitpack.io' }
     mavenCentral()
     jcenter()
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    //implementation "com.github.carlemil:vwcurve:1.0-SNAPSHOT"
-    api "se.kjellstrand:vwchull:1.2-SNAPSHOT"
+    implementation "com.github.carlemil:VWCurve:1.2"
+    //api "se.kjellstrand:vwchull:1.3-SNAPSHOT"
     testCompile "org.apache.xmlgraphics:batik-transcoder:1.10"
     testCompile "org.apache.xmlgraphics:batik-codec:1.9"
     testCompile group: 'junit', name: 'junit', version: '4.12'
