--- a/local.properties
+++ b/local.properties
@@ -1,2 +1,9 @@
+## This file must *NOT* be checked into Version Control Systems,
+# as it contains information specific to your local configuration.
+#
+# Location of the SDK. This is only used by Gradle.
+# For customization when using a Version Control System, please read the
+# header note.
+#Mon Mar 22 20:22:15 CET 2021
+sdk.dir=C\:\\Users\\erbsm\\AppData\\Local\\Android\\Sdk
 javaHome=/Library/Java/JavaVirtualMachines/adoptopenjdk-8.jdk/Contents/Home
-
