--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 }
 
 group 'se.kjellstrand'
-version '1.3.1-SNAPSHOT'
+version '1.3.1'
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
